--- a/website/index.html
+++ b/website/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito" >
-  <link rel="stylesheet" href="css/pace-theme.css">
-  <link rel="stylesheet" href="css/spacepaper.css">
+  <link rel="stylesheet" href="./css/pace-theme.css">
+  <link rel="stylesheet" href="./css/spacepaper.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
-  <script>$.backstretch("images/bg.jpg");</script>
+  <script>$.backstretch("./images/bg.jpg");</script>
 
   <div class="container" id="hide">
     <div class="row mx-4 my-3">
@@ -35,7 +35,7 @@
       <div class="col-lg-12">
         <div class="grid">
           <div class="grid-item">
-            <script src="js/spacepaper.js"></script>
+            <script src="./js/spacepaper.js"></script>
           </div>
         </div>
       </div>
